force-app/main/default/objects/ProjectStatusDetail__c/ProjectStatusDetail__c.object-meta.xml
<CustomObject>
    <label>Project Status Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Status Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>