force-app/main/default/objects/ProjectStatusDetail__c/fields/OriginalEstimate__c.field-meta.xml
<CustomField>
    <fullName>OriginalEstimate__c</fullName>
    <label>Original Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>