force-app/main/default/objects/ProjectStatusDetail__c/fields/OvernightConsumptive__c.field-meta.xml
<CustomField>
    <fullName>OvernightConsumptive__c</fullName>
    <label>Overnight Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>