force-app/main/default/objects/ProjectStatusDetail__c/fields/ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus__c</fullName>
    <label>Project Status</label>
    <referenceTo>ProjectStatus__c</referenceTo>
    <relationshipLabel>Project Status Details</relationshipLabel>
    <relationshipName>ProjectStatusDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>