force-app/main/default/objects/ProjectStatusDetail__c/fields/TimeSpend__c.field-meta.xml
<CustomField>
    <fullName>TimeSpend__c</fullName>
    <label>Time Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>