force-app/main/default/objects/ProjectStatusDetail__c/fields/TravelConsumptive__c.field-meta.xml
<CustomField>
    <fullName>TravelConsumptive__c</fullName>
    <label>Travel Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>