force-app/main/default/objects/ProjectStatusDetail__c/fields/WorkingConsumptive__c.field-meta.xml
<CustomField>
    <fullName>WorkingConsumptive__c</fullName>
    <label>Working Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>